--- a/angular/index.html
+++ b/angular/index.html
@@ -9,6 +9,7 @@
 
   <!-- Styles -->
   <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bower_components/PACE/themes/blue/pace-theme-flash.css" rel="stylesheet">
   <style type="text/css">
     .settings{
       width: 30%;
@@ -33,6 +34,8 @@
   <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script src="bower_components/moment/min/moment.min.js"></script>
+  <script src="bower_components/angular-moment/angular-moment.min.js"></script>
+  <script src="bower_components/PACE/pace.min.js"></script>
 
   <!-- Angular Scripts -->
   <script src="app.js"></script>
